Prep to deploy to GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📧</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Email Preview - Compose</title>
+    <title>Email Preview</title>
+    <!-- Redirect to compose page -->
+    <meta http-equiv="refresh" content="0; url=compose.html" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app">
+      <p>Redirecting to <a href="compose.html">compose page</a>...</p>
+    </div>
   </body>
 </html>
